--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry kind="lib" path="lib/test/commons-codec-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/test/commons-compress-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/test/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/test/java-map-proj-lib-20110602.jar"/>
 	<classpathentry kind="lib" path="lib/test/jpf-1.5.jar"/>
 	<classpathentry kind="lib" path="lib/test/junit-4.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/test/osmosis-core-0.39.jar"/>
@@ -15,5 +14,7 @@
 	<classpathentry kind="lib" path="lib/test/stax2-api-3.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/test/woodstox-core-lgpl-4.0.3.jar"/>
 	<classpathentry kind="lib" path="lib/test/xercesImpl-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/test/xml-apis-1.3.04.jar"/>
+	<classpathentry kind="lib" path="lib/test/jts-1.11.jar"/>
 	<classpathentry kind="output" path="eclipse"/>
 </classpath>
