--- a/ivy.xml
+++ b/ivy.xml
@@ -6,7 +6,7 @@
       <conf name="test" visibility="private" description="Testing." extends="runtime" />
     </configurations>
     <dependencies>
-      <dependency org="com.jhlabs" name="java-map-proj-lib" rev="20110602" conf="compile->default" />
+	  <dependency org="com.vividsolutions" name="jts" rev="1.11" conf="compile->default" />
       <dependency org="org.openstreetmap.osmosis" name="osmosis-core" rev="0.39" conf="compile->default" />
       <dependency org="org.openstreetmap.osmosis" name="osmosis-tagfilter" rev="0.39" conf="test->default" />
       <dependency org="org.openstreetmap.osmosis" name="osmosis-xml" rev="0.39" conf="test->default" />
