* create zip file

--- a/build.xml
+++ b/build.xml
@@ -145,6 +145,11 @@
 	</target>
 	
 	<target name="dist" depends="jar">
+		<copy todir="${dist.dir}">
+			<fileset dir="${lib.dir}/dist">
+				<exclude name="xerces*.jar" />
+			</fileset>
+		</copy>
 		<zip destfile="${dist.dir}/${ant.project.name}-${project.version}.zip">
 			<fileset dir="${dist.dir}">
 				<include name="${ant.project.name}-${project.version}.jar" />
